# DeepTank

./: CHANGELOG.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.codex/: codex-os.manifest.json
.codex/bootstrap/: tests-docs.v1.json
.github/: CONTRIBUTING.md  RELEASE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/scripts/: bump-version.sh  generate-changelog.sh
.github/workflows/: build.yml  release.yml  test.yml
.taskmaster/docs/: prd.txt
codex/: CHANGELOG_DRAFT.md  CHECKPOINTS.md  DECISIONS.md  IMPLEMENTATION_COMPLETE.md  PLAN.md  SESSION_LOG.md  VERIFICATION.md
docs/: ARCHITECTURE.md  BUILDING.md  GENETICS.md
scripts/: clean-heavy.sh  clean-local.sh  dev-lean.sh  tauri.sh
src/: App.tsx  main.tsx  types.test.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/simulation/: achievements.rs  boids.rs  config.rs  ecosystem.rs  events.rs  fish.rs  genome.rs  mod.rs  ollama.rs  persistence.rs  scenarios.rs
src/audio/: audioEngine.test.ts  audioEngine.ts
src/components/: AchievementPanel.tsx  BreedingPanel.tsx  DecorationPalette.tsx  Inspector.tsx  NarrationTicker.tsx  PhylogeneticTree.tsx  ReplayControls.tsx  ScenarioPanel.tsx  SettingsPanel.tsx  SpeciesGallery.tsx  StatsPanel.tsx  TankSwitcher.tsx  Toasts.tsx  Toolbar.tsx  TopBar.tsx
src/renderer/: canvasRenderer.ts  fishSprite.test.ts  fishSprite.ts
