[package]
name = "deeptank"
version = "0.1.0"
description = "A living desktop aquarium with genetic evolution"
authors = ["you"]
edition = "2021"

[lib]
name = "deeptank_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
rmp-serde = "1"
noise = "0.9"
rand = "0.8"
rand_distr = "0.4"
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
log = "0.4"
env_logger = "0.11"
dirs = "6"
